core services and testar module updates